--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,17 @@
 # NEVER commit .env.local to version control
 
 # ===========================================
-# Supabase Configuration
+# MongoDB Configuration
 # ===========================================
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+MONGODB_URI=mongodb://localhost:27017/taptifs
+# For MongoDB Atlas (production):
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/taptifs
+
+# ===========================================
+# JWT Authentication Configuration
+# ===========================================
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRATION=7d
 
 # ===========================================
 # Stripe Payment Configuration
