--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,14 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRATION=7d
 
 # ===========================================
+# NextAuth Configuration (Google OAuth)
+# ===========================================
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-random-secret-generate-with-openssl-rand-base64-32
+GOOGLE_CLIENT_ID=your-google-client-id-from-console
+GOOGLE_CLIENT_SECRET=your-google-client-secret-from-console
+
+# ===========================================
 # Stripe Payment Configuration
 # ===========================================
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
@@ -38,8 +46,17 @@ NEXT_PUBLIC_SANITY_DATASET=production
 SANITY_API_TOKEN=your_sanity_api_token
 
 # ===========================================
-# Email Service (Resend or SendGrid)
+# Email Service (SMTP for Wholesale Inquiries)
 # ===========================================
+# SMTP Configuration (Required for wholesale form)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=info@taptifs.com
+SMTP_PASS=Taptifs@2025
+SMTP_FROM=noreply@taptifs.com
+ADMIN_EMAIL=info@taptifs.com
+
+# Alternative Email Services
 RESEND_API_KEY=your_resend_api_key
 # OR
 SENDGRID_API_KEY=your_sendgrid_api_key
